kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: notes-app-deployment
spec:
 selector:
   # Selector for Pods
   app: notes-app
 ports:
   # Port Map
 - port: 80
   targetPort: 80
 type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
 name: notes-app-deployment-2
spec:
 selector:
   # Selector for Pods
   app: notes-app
 ports:
   # Port Map
 - port: 3000
   targetPort: 3000
 type: ClusterIP
